Slightly modify colors and fix overlap bug with the circle

--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -298,8 +298,8 @@ textarea.entry-input::placeholder {
 
 .line {
 	position: absolute;
-	background-color: rgb(var(--main-six));
-	z-index: 1;
+	background-color: rgb(var(--main-seven));
+	z-index: 2;
 	opacity: 50%;
 }
 
@@ -325,14 +325,14 @@ textarea.entry-input::placeholder {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	width: 50%;
-	height: 50%;
+	width: 50.2%;
+	height: 50.2%;
 	cursor: pointer;
 	gap: 0.25rem;
-	background-color: rgb(var(--main-three));
+	background-color: rgb(var(--main-five));
 	border: none;
 	transition: filter 0.2s, transform 0.2s;
-	will-change: transform;
+	color: rgb(var(--gray-one));
 }
 
 .quadrant.top-left {
@@ -370,8 +370,9 @@ textarea.entry-input::placeholder {
 }
 
 .score {
-	font-size: 1.15rem;
+	font-size: 1.2rem;
 	font-weight: bold;
+	color: rgb(var(--accent-one));
 }
 
 .label,
